Added get_schedules() and removed get_schedule(scheduleId). Inserted id attribute to schedule object. Removed xml format, using only json.
